# agentslap

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.toml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-comms/: Cargo.toml
crates/agent-comms/src/: address.rs  context.rs  coordinator.rs  delegation.rs  error.rs  hierarchy.rs  http_transport.rs  in_process.rs  lib.rs  message.rs  registry.rs  transport.rs
crates/agent-comms/tests/: e2e_multi_agent.rs
crates/agent-context/: Cargo.toml
crates/agent-context/src/: lib.rs
crates/agent-coordination/: Cargo.toml
crates/agent-coordination/examples/: README.md  multi_agent_coordination.rs
crates/agent-coordination/src/: error.rs  factory.rs  lib.rs  orchestrator.rs
crates/agent-core/: Cargo.toml
crates/agent-core/examples/: phase0_basic.rs
crates/agent-core/src/: config.rs  error.rs  lib.rs  logging.rs
crates/agent-core/tests/: integration_test.rs
crates/agent-guardrails/: Cargo.toml
crates/agent-guardrails/examples/: config_based.rs  guardrails_demo.rs
crates/agent-guardrails/src/: chain.rs  config.rs  content_filter.rs  cost_limiter.rs  error.rs  guardrail.rs  lib.rs  rate_limiter.rs  tool_allowlist.rs  violation.rs
crates/agent-hitl/: Cargo.toml
crates/agent-hitl/examples/: approval_demo.rs
crates/agent-hitl/src/: audit.rs  auto_approve.rs  callback.rs  console.rs  error.rs  lib.rs  mock.rs  request.rs  strategy.rs
crates/agent-llm/: Cargo.toml  README.md
crates/agent-llm/examples/: basic_completion.rs  conversation_demo.rs  conversation_with_llm.rs  streaming_completion.rs
crates/agent-llm/src/: anthropic.rs  conversation.rs  error.rs  helpers.rs  lib.rs  openai.rs  provider.rs  types.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: lib.rs
crates/agent-runtime/: Cargo.toml  README.md
crates/agent-runtime/examples/: agent_with_hitl.rs  basic_agent.rs  dynamic_coordinator.rs  streaming_agent.rs
crates/agent-runtime/src/: agent.rs  error.rs  factory.rs  lib.rs  parser.rs  stream.rs
crates/agent-runtime/tests/: e2e_real_integration.rs  real_multi_agent.rs
crates/agent-server/: API.md  Cargo.toml  IMPLEMENTATION.md  README.md
crates/agent-server/src/: handlers.rs  main.rs  models.rs  state.rs
crates/agent-session/: Cargo.toml  README.md
crates/agent-session/examples/: basic_storage.rs  database_storage.rs  layered_storage.rs
crates/agent-session/migrations/: 001_initial_schema.sql
crates/agent-session/src/: cache.rs  database.rs  error.rs  layered.rs  lib.rs  memory.rs  store.rs
crates/agent-telemetry/: Cargo.toml
crates/agent-telemetry/src/: collector.rs  event.rs  lib.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/examples/: tool_demo.rs
crates/agent-tools/src/: error.rs  lib.rs  registry.rs  schema.rs  tool.rs
crates/agent-tools/src/builtin/: calculator.rs  current_time.rs  echo.rs  file_delete.rs  mod.rs
crates/agent-tools/src/builtin/communication/: broadcast_to_team.rs  delegate_task.rs  escalate.rs  mod.rs  send_message.rs
crates/agent-tui/: Cargo.toml  README.md
crates/agent-tui/src/: app.rs  client.rs  coordinator.rs  main.rs  ui.rs
examples/: phase0_basic.rs
scripts/: run_tui.sh  test_api.sh  test_coordination.sh  test_full_api.sh
tests/: integration_test.rs
