[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-runtime = { path = "../agent-runtime" }
agent-llm = { path = "../agent-llm" }
agent-session = { path = "../agent-session" }
agent-tools = { path = "../agent-tools" }

tokio = { workspace = true }
anyhow = { workspace = true }

