[package]
name = "agent-comms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for message IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Concurrent data structures
dashmap = { workspace = true }

# Shared context types
agent-context = { path = "../agent-context" }

# Futures
futures = "0.3"

# HTTP client (optional, for HttpTransport)
reqwest = { workspace = true, optional = true }

# Core crates
agent-core = { path = "../agent-core" }

[features]
default = []
http = ["dep:reqwest"]

[dev-dependencies]
tokio-test = "0.4"
