[package]
name = "agent-hitl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for request tracking
uuid = { version = "1.11", features = ["v4", "serde"] }

# Concurrent data structures
dashmap = { workspace = true }

# Core crates
agent-core = { path = "../agent-core" }

[dev-dependencies]
tokio-test = "0.4"
