[package]
name = "agent-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Streaming
futures = "0.3"
tokio-stream = "0.1"
eventsource-stream = "0.2"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Core crate
agent-core = { path = "../agent-core" }

[dev-dependencies]
tokio-test = "0.4"
# wiremock = "0.5" # Temporarily disabled - will use manual mocks for now
