[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Logging
tracing = { workspace = true }

# Streaming
futures = "0.3"
async-stream = "0.3"

# Core crates (NO CIRCULAR DEPENDENCIES!)
agent-core = { path = "../agent-core" }
agent-llm = { path = "../agent-llm" }
agent-session = { path = "../agent-session" }
agent-tools = { path = "../agent-tools" }
agent-hitl = { path = "../agent-hitl" }
agent-comms = { path = "../agent-comms" }

# Additional dependencies
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
agent-guardrails = { path = "../agent-guardrails" }
agent-comms = { path = "../agent-comms" }
futures = "0.3"

