[package]
name = "agent-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Concurrent data structures
dashmap = { workspace = true }

# Async cache with TTL
moka = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Core crates
agent-core = { path = "../agent-core" }
agent-llm = { path = "../agent-llm" }

[dev-dependencies]
tokio-test = "0.4"
