[package]
name = "agent-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for event IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Core crate
agent-core = { path = "../agent-core" }

[dev-dependencies]
tokio-test = "0.4"

