[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Agent crates
agent-coordination = { path = "../agent-coordination" }
agent-runtime = { path = "../agent-runtime" }
agent-comms = { path = "../agent-comms" }
agent-llm = { path = "../agent-llm" }
agent-session = { path = "../agent-session" }
agent-hitl = { path = "../agent-hitl" }
agent-tools = { path = "../agent-tools" }

# Utilities
futures = "0.3"
anyhow = { workspace = true }
chrono = "0.4"
