[package]
name = "agent-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-tui"
path = "src/main.rs"

[dependencies]
# UI
ratatui = "0.28"
crossterm = "0.28"

# Async
tokio = { workspace = true, features = ["full"] }
futures = "0.3"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
eventsource-stream = "0.2"  # For SSE

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4"] }
